<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">akshyar</string>
    <string name="action_exit">Exit</string>
    <string name="action_settings">Preferences</string>
    <string name="action_checkupdate">Check Updates</string>
    <string name="action_compose">Write</string>
    <string name="action_signin">Sign In</string>
    <string name="action_library">Library</string>
    <string name="action_shop">Shop</string>
    <string name="action_learn">Learn</string>
    <string name="action_search">Search</string>
    <string name="title_activity_compose">Compose</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_signin">Sign In</string>
    <string name="title_activity_signup">Sign Up</string>

    <string-array name="drawer_list_titles">
        <item>SignIn</item>
        <item>Library</item>
        <item>Settings</item>
    </string-array>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="title_activity_library">Library</string>
    <string name="title_activity_reviews">Reviews</string>
    <string name="title_activity_books">Books</string>
    <string name="title_activity_shop">Shop</string>
    <string name="title_activity_single_page">Post</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_signup">Sign Up</string>
    <string name="action_feedback">Send us feedback</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_update">Update</string>
    <string name="title_activity_feedback">Send Us Feedback</string>
    <string name="title_activity_user_profile">Profile</string>
    <string name="title_activity_prefs">Preferences</string>
    <string name="title_activity_notification_receiver">Notification</string>
    <string name="title_activity_uploader">Uploader</string>
    <string name="title_activity_image_uploader">Upload Image</string>
    <string name="title_activity_edit_account">Edit</string>

</resources>
