<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pike.litnep.MainActivity" >

    <item
        android:id="@+id/action_compose"
        android:icon="@drawable/ic_action_new_label"
        android:title="@string/action_compose"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_signin"
        android:title="@string/action_signin"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_signup"
        android:title="@string/action_signup"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_library"
        android:title="@string/action_library"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_feedback"
        android:title="@string/action_feedback"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_checkupdate"
        android:title="@string/action_checkupdate"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="99"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never"/>

</menu>